fixed broken notice (line spacing), darkened bg of notice

--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,11 @@ article > div {
 .notice {
 	font-family: 'Ubuntu',sans-serif;
 	font-size: 100%;
-	line-height: 0px;
-	padding: 35px;
+	padding: 15px;
 	text-align: center;
-	background-color: #353535;
+	background-color: #2c2c2c;
 	color: white;
+	word-wrap: normal;
 }
 
 .paid {
